# cmake-calculator

./: CMakeLists.txt  conanfile.py  do_build.sh
include/: CMakeLists.txt
include/pg/: Adder.h  IExpr.h  Terminal.h
pkg/calc/: conanfile.py
pkg/pg/: conanfile.py
src/calc/: CMakeLists.txt  Calc.cpp
src/pg/: Adder.cpp  CMakeLists.txt  Terminal.cpp
test/pg/: CMakeLists.txt  LibTest.cpp
